--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header class="page-header">
       <div class="container">
-      e-mail: budlow@yandex.ru
-      телефон: +79134153777
-      репозиторий: https://github.com/8-lines
+      E-mail: budlow@yandex.ru<br>
+      Телефон: +79134153777<br>
+      Репозиторий: https://github.com/8-lines
       </div>
     </header>
 
@@ -70,9 +70,9 @@
 
     <footer class="page-footer">
       <div class="container">
-      e-mail: budlow@yandex.ru
-      телефон: +79134153777
-      репозиторий: https://github.com/8-lines
+      E-mail: budlow@yandex.ru<br>
+      Телефон: +79134153777<br>
+      Репозиторий: https://github.com/8-lines
       </div>
     </footer>
   </body>
