--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
   <body>
     <header class="page-header">
       <div class="container">
-      E-mail: budlow@yandex.ru<br>
-      Телефон: +79134153777<br>
-      Репозиторий: https://github.com/8-lines
+      <a class="header-email" href="mailto:budlow@yandex.ru">budlow@yandex.ru</a>
+      <a class="header-phone" href="tel:+79134153777">+7 (913) 415-37-77</a>
+      <a href="https://github.com/8-lines">https://github.com/8-lines</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Будлов Егор Олегович</h1>
+      <h1 class="heading">Будлов Егор</h1>
       <p>Тестировщик-стажер</p>
+      
       </div>
     </section>
 
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+        <img src="files/user.jpg" width="320" height="400" alt="Моя фоторгафия" class="user-image">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>
         Меня зовут Егор, я закончил бакалавриат Санкт-Петербургского Государственного университета по направлению «Фундаментальная информатика и информационные технологии». За время учебы я выполнил несколько работ с использованием различных технологий и языков программирования. Два наиболее значимых были представлены на международных конференциях, опубликованы в научных изданиях и проиндексированы (РИНЦ/Scopus). 
@@ -40,18 +44,20 @@
         От новой работы жду интересных задач и общения с опытными разработчиками ПО, любящими свою работу. Несмотря на отсутствие опыта в тестировании, я увлечен своей профессией и могу быстро вникнуть в незнакомую область. Со своей стороны, готов приложить все усилия для изучения новых технологий, чтобы внести ощутимый вклад в работу команды.
       </p>
       <h3>Чем могу быть полезен</h3>
-      <p>Хорошее знание C/C++.</p>
-      <p>Учебный опыт в Python, SQL, HTML/CSS/Javascript, MATLAB.</p>
-      <p>Начальные знания Android studio.</p>
-      <p>Знание основ тестирования.</p>
-      <p>Знание иностранных языков: Анлгийский (~B2-C1), Немецкий(~A2-B1), Японский(~N4).</p>
+      <ul>
+      <li>Хорошее знание C/C++.</li>
+      <li>Учебный опыт в Python, SQL, HTML/CSS/Javascript, MATLAB.</li>
+      <li>Начальные знания Android studio.</li>
+      <li>Знание основ тестирования.</li>
+      <li>Знание иностранных языков: Анлгийский (~B2-C1), Немецкий(~A2-B1), Японский(~N4).</li>
+      </ul>
       </div>
     </section>
 
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      
       <h3>Автоматизированное создание уникальных редактируемых текстур для трехмерных моделей археологических артефактов</h3>
       <p>Разработано расширение для 3D-редактора «Blender» (автоматическая генерация 3D-текстур с использованием Python, также может быть развернута в контейнере Docker). Соответствующая статья представлена на международной конференции ICCSA-2019, опубликована и проиндексирована SCOPUS. </p>
       <p>В 2020 году функционал программы был значительно расширен и улучшен, прогресс представлен на конференции ICCSA-2020, результаты опубликованы и проиндексированы SCOPUS.  </p>
@@ -64,15 +70,20 @@
     <section class="hobby">
       <div class="container">
       <h2 class="subheading">Хобби</h2>
-      <p>Военно-спортивные игры (лазертаг, пейнтбол), шахматы, изучение немецкого и японского языков, настольные игры.</p>
+      <ul>
+      <li>Военно-спортивные игры (лазертаг, пейнтбол).</li>
+      <li>Шахматы.</li> 
+      <li>изучение немецкого и японского языков.</li> 
+      <li>Настольные игры.</li>
+      </ul>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-      E-mail: budlow@yandex.ru<br>
-      Телефон: +79134153777<br>
-      Репозиторий: https://github.com/8-lines
+        <a class="footer-email" href="mailto:budlow@yandex.ru">budlow@yandex.ru</a>
+        <a class="footer-phone" href="tel:+79134153777">+7 (913) 415-37-77</a>
+        <a href="https://github.com/8-lines">https://github.com/8-lines</a>
       </div>
     </footer>
   </body>
