--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="owner-image">
       <div class="container">
       <h1 class="heading">Будлов Егор</h1>
-      <p>Начинающий тестировщик</p>
+      <p>Начинающий программист</p>
       <figure>
         <img src="files/user.jpg" width="320" height="400" alt="Моя фоторгафия" class="user-image">
       </figure>
@@ -38,10 +38,7 @@
         В свободное время также пробовал свои силы в разработке простого мобильного Android-приложения, создании несложного web-приложения с использованием облачных сервисов и SQL. Помимо этого, я занимаюсь изучением немецкого и японского языков, имею опыт участия в программах академического обмена в Германии и Японии.
       </p>
       <p>
-        На данный момент обучаюсь в магистратуре СПбГУ по направлению «Распределенные вычислительные технологии». Активно обучаюсь тестированию. Прошел курс «Тестирование ПО 2020. С нуля до Junior QA» на Stepik.org, а также курс QA от Nix Education.
-      </p>
-      <p>
-        От новой работы жду интересных задач и общения с опытными разработчиками ПО, любящими свою работу. Несмотря на отсутствие опыта в тестировании, я увлечен своей профессией и могу быстро вникнуть в незнакомую область. Со своей стороны, готов приложить все усилия для изучения новых технологий, чтобы внести ощутимый вклад в работу команды.
+        От новой работы жду интересных задач и общения с опытными разработчиками ПО, любящими свою работу. Несмотря на отсутствие опыта, я увлечен своей профессией и могу быстро вникнуть в незнакомую область. Со своей стороны, готов приложить все усилия для изучения новых технологий, чтобы внести ощутимый вклад в работу команды.
       </p>
       <h3>Мои навыки</h3>
       <ul>
