--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
         От новой работы жду интересных задач и общения с опытными разработчиками ПО, любящими свою работу. Несмотря на отсутствие опыта, я увлечен своей профессией и могу быстро вникнуть в незнакомую область. Со своей стороны, готов приложить все усилия для изучения новых технологий, чтобы внести ощутимый вклад в работу команды.
       </p>
       <h3>Мои навыки</h3>
-      <ul>
-        <li>Хорошее знание C/C++.</li>
-        <li>Учебный опыт в Python, SQL, HTML/CSS/Javascript, MATLAB.</li>
-        <li>Начальные знания Android studio.</li>
-        <li>Знание основых понятий и методов тестирования.</li>
-        <li>Владение иностранными языками: Анлгийский (~B2-C1), Немецкий(~A2-B1), Японский(~N4).</li>
-      </ul>
+        <ul>
+          <li>Хорошее знание C/C++.</li>
+          <li>Учебный опыт в Python, SQL, HTML/CSS/Javascript, MATLAB.</li>
+          <li>Начальные знания Android studio.</li>
+          <li>Знание основых понятий и методов тестирования.</li>
+        </ul>
       </div>
 
       <div class="container skills">
@@ -57,6 +56,15 @@
           <li>QA: Beginner (Nix Education).</li>
           <li>Упражнения на оператор SELECT: обучающий этап (sql-ex.ru)</li>
           <li>Тренажер: Знакомство с HTML и CSS (html academy).</li>
+        </ul>
+      </div>
+
+      <div class="container languages">
+        <h3>Владение иностранными языками</h3>
+        <ul>
+          <li>Анлгийский (~B2-C1).</li>
+          <li>Немецкий(~A2-B1).</li>
+          <li>Японский(~N4).</li>
         </ul>
       </div>
 
