--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       
       <h3>Пара слов о себе</h3>
       <p>
-        Меня зовут Егор, я закончил бакалавриат Санкт-Петербургского Государственного университета по направлению «Фундаментальная информатика и информационные технологии». За время учебы я выполнил несколько работ с использованием различных технологий и языков программирования. Два наиболее значимых были представлены на международных конференциях, опубликованы в научных изданиях и проиндексированы (РИНЦ/Scopus). 
+        Меня зовут Егор, я закончил бакалавриат Санкт-Петербургского Государственного университета по направлению «Фундаментальная информатика и информационные технологии». На данный момент продолжаю обучение в магистратуре по программе "Распределенные вычислительные технологии". За время учебы я выполнил несколько работ с использованием различных технологий и языков программирования. Два наиболее значимых были представлены на международных конференциях, опубликованы в научных изданиях и проиндексированы (РИНЦ/Scopus). 
       </p>
       <p>
-        В свободное время также пробовал свои силы в разработке простого мобильного Android-приложения, создании несложного web-приложения с использованием облачных сервисов и SQL. Помимо этого, я занимаюсь изучением немецкого и японского языков, имею опыт участия в программах академического обмена в Германии и Японии.
+        В свободное время также пробовал свои силы в разработке простого мобильного Android-приложения, создании несложного web-приложения с использованием облачных сервисов и SQL, а также изучении основ тестирования. Помимо этого, я занимаюсь изучением немецкого и японского языков, имею опыт участия в программах академического обмена в Германии и Японии.
       </p>
       <p>
         От новой работы жду интересных задач и общения с опытными разработчиками ПО, любящими свою работу. Несмотря на отсутствие опыта, я увлечен своей профессией и могу быстро вникнуть в незнакомую область. Со своей стороны, готов приложить все усилия для изучения новых технологий, чтобы внести ощутимый вклад в работу команды.
