--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
@@ -32,8 +32,8 @@
       
       <h3>Пара слов о себе</h3>
       <p>
-        Меня зовут Егор, я закончил бакалавриат Санкт-Петербургского Государственного университета по направлению «Фундаментальная информатика и информационные технологии». На данный момент продолжаю обучение в магистратуре по программе "Распределенные вычислительные технологии". За время учебы я выполнил несколько работ с использованием различных технологий и языков программирования. Два наиболее значимых были представлены на международных конференциях, опубликованы в научных изданиях и проиндексированы (РИНЦ/Scopus). 
-      </p>
+        Меня зовут Егор, я закончил бакалавриат Санкт-Петербургского Государственного университета по направлению <q>Фундаментальные информатика и информационные технологии</q>. На данный момент продолжаю обучение в магистратуре по программе <q>Распределенные вычислительные технологии</q>. За время учебы я выполнил несколько работ с использованием различных технологий и языков программирования. Два наиболее значимых были представлены на международных конференциях, опубликованы в научных изданиях и проиндексированы (РИНЦ/Scopus).
+</p>
       <p>
         В свободное время также пробовал свои силы в разработке простого мобильного Android-приложения, создании несложного web-приложения с использованием облачных сервисов и SQL, а также изучении основ тестирования. Помимо этого, я занимаюсь изучением немецкого и японского языков, имею опыт участия в программах академического обмена в Германии и Японии.
       </p>
@@ -77,10 +77,12 @@
       <h3 class="article"><q>Автоматизированное создание уникальных редактируемых текстур для трехмерных моделей археологических артефактов</q></h3>
       <p>Разработано расширение для 3D-редактора «Blender» (автоматическая генерация 3D-текстур с использованием Python, также может быть развернута в контейнере Docker). Соответствующая статья представлена на международной конференции ICCSA-2019, опубликована и проиндексирована SCOPUS. </p>
       <p>В 2020 году функционал программы был значительно расширен и улучшен, прогресс представлен на конференции ICCSA-2020, результаты опубликованы и проиндексированы SCOPUS.  </p>
-      
+      <p><b>Использованные технологии:</b> Python, Blender, Unity3D, Docker.</p>
+
       <h3 class="article"><q>Система распознавания цветовых маркеров</q></h3>
       <p>Научная работа «Color markers localization system» (C++, компьютерное зрение) была представлена на международной конференции ICAIT-2018 и опубликована в журнале, индексируемом SCOPUS. </p>
-      </div>
+      <p><b>Использованные технологии:</b> C++, Microsoft Visual Studio.</p>
+    </div>
     </section>
 
     <!--<section class="hobby">
