--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3>Мои навыки</h3>
         <ul>
           <li>Хорошее знание C/C++.</li>
-          <li>Учебный опыт в Python, SQL, HTML/CSS/Javascript, MATLAB.</li>
+          <li>Учебный опыт в Java, Python, SQL, HTML/CSS/Javascript, MATLAB.</li>
           <li>Начальные знания Android studio.</li>
           <li>Знание основых понятий и методов тестирования.</li>
         </ul>
@@ -56,6 +56,8 @@
           <li>QA: Beginner (Nix Education).</li>
           <li>Упражнения на оператор SELECT: обучающий этап (sql-ex.ru)</li>
           <li>Тренажер: Знакомство с HTML и CSS (html academy).</li>
+          <li>Java программирование (examclouds.com).</li>
+          
         </ul>
       </div>
 
