--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <ul>
           <li>Тестирование ПО 2020. С нуля до Junior QA (stepik.org).</li>
           <li>QA: Beginner (Nix Education).</li>
-          <li>Упражнения на оператор SELECT: обучающий этап (sql-ex.ru)</li>
+          <li>Упражнения на оператор SELECT: обучающий этап (sql-ex.ru).</li>
           <li>Тренажер: Знакомство с HTML и CSS (html academy).</li>
           <li>Java программирование (examclouds.com).</li>
+          <li>30 Days of API Testing with Rest Assured (The Testing Academy).</li>
           
         </ul>
       </div>
